// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders all status variants 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-alert om-react-ui-alert-info"
      >
        <span
          class="om-react-ui-alert-icon"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="32"
              stroke="none"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                fill="#DDE6F4"
              />
              <g
                clip-path="url(#notif-info-clip)"
              >
                <path
                  clip-rule="evenodd"
                  d="M16 10C19.3137 10 22 12.6863 22 16C22 19.3137 19.3137 22 16 22C12.6863 22 9.99999 19.3137 9.99999 16C9.99999 12.6863 12.6863 10 16 10ZM16 8.66669C20.0501 8.66669 23.3333 11.9499 23.3333 16C23.3333 20.0501 20.0501 23.3334 16 23.3334C11.9499 23.3334 8.66666 20.0501 8.66666 16C8.66666 11.9499 11.9499 8.66669 16 8.66669Z"
                  fill="#073387"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.3333 15.3334V19.6667H16.6667V15.3334H15.3333Z"
                  fill="#073387"
                  fill-rule="evenodd"
                />
                <path
                  d="M17 13.3334C17 12.7811 16.5523 12.3334 16 12.3334C15.4477 12.3334 15 12.7811 15 13.3334C15 13.8856 15.4477 14.3334 16 14.3334C16.5523 14.3334 17 13.8856 17 13.3334Z"
                  fill="#073387"
                />
              </g>
              <defs>
                <clippath
                  id="notif-info-clip"
                >
                  <rect
                    fill="white"
                    height="16"
                    transform="translate(8 8)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </i>
        </span>
        <div
          class="om-react-ui-alert-content"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
          >
            info alert
          </div>
        </div>
        <button
          aria-label="Close alert"
          class="om-react-ui-alert-close"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="currentColor"
              height="16"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-alert om-react-ui-alert-info"
    >
      <span
        class="om-react-ui-alert-icon"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="32"
            stroke="none"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
              fill="#DDE6F4"
            />
            <g
              clip-path="url(#notif-info-clip)"
            >
              <path
                clip-rule="evenodd"
                d="M16 10C19.3137 10 22 12.6863 22 16C22 19.3137 19.3137 22 16 22C12.6863 22 9.99999 19.3137 9.99999 16C9.99999 12.6863 12.6863 10 16 10ZM16 8.66669C20.0501 8.66669 23.3333 11.9499 23.3333 16C23.3333 20.0501 20.0501 23.3334 16 23.3334C11.9499 23.3334 8.66666 20.0501 8.66666 16C8.66666 11.9499 11.9499 8.66669 16 8.66669Z"
                fill="#073387"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M15.3333 15.3334V19.6667H16.6667V15.3334H15.3333Z"
                fill="#073387"
                fill-rule="evenodd"
              />
              <path
                d="M17 13.3334C17 12.7811 16.5523 12.3334 16 12.3334C15.4477 12.3334 15 12.7811 15 13.3334C15 13.8856 15.4477 14.3334 16 14.3334C16.5523 14.3334 17 13.8856 17 13.3334Z"
                fill="#073387"
              />
            </g>
            <defs>
              <clippath
                id="notif-info-clip"
              >
                <rect
                  fill="white"
                  height="16"
                  transform="translate(8 8)"
                  width="16"
                />
              </clippath>
            </defs>
          </svg>
        </i>
      </span>
      <div
        class="om-react-ui-alert-content"
      >
        <div
          class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
        >
          info alert
        </div>
      </div>
      <button
        aria-label="Close alert"
        class="om-react-ui-alert-close"
        type="button"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="currentColor"
            height="16"
            stroke="none"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Alert renders all status variants 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-alert om-react-ui-alert-info"
      >
        <span
          class="om-react-ui-alert-icon"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="32"
              stroke="none"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                fill="#DDE6F4"
              />
              <g
                clip-path="url(#notif-info-clip)"
              >
                <path
                  clip-rule="evenodd"
                  d="M16 10C19.3137 10 22 12.6863 22 16C22 19.3137 19.3137 22 16 22C12.6863 22 9.99999 19.3137 9.99999 16C9.99999 12.6863 12.6863 10 16 10ZM16 8.66669C20.0501 8.66669 23.3333 11.9499 23.3333 16C23.3333 20.0501 20.0501 23.3334 16 23.3334C11.9499 23.3334 8.66666 20.0501 8.66666 16C8.66666 11.9499 11.9499 8.66669 16 8.66669Z"
                  fill="#073387"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.3333 15.3334V19.6667H16.6667V15.3334H15.3333Z"
                  fill="#073387"
                  fill-rule="evenodd"
                />
                <path
                  d="M17 13.3334C17 12.7811 16.5523 12.3334 16 12.3334C15.4477 12.3334 15 12.7811 15 13.3334C15 13.8856 15.4477 14.3334 16 14.3334C16.5523 14.3334 17 13.8856 17 13.3334Z"
                  fill="#073387"
                />
              </g>
              <defs>
                <clippath
                  id="notif-info-clip"
                >
                  <rect
                    fill="white"
                    height="16"
                    transform="translate(8 8)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </i>
        </span>
        <div
          class="om-react-ui-alert-content"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
          >
            info alert
          </div>
        </div>
        <button
          aria-label="Close alert"
          class="om-react-ui-alert-close"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="currentColor"
              height="16"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
    <div>
      <div
        class="om-react-ui-alert om-react-ui-alert-success"
      >
        <span
          class="om-react-ui-alert-icon"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="32"
              stroke="none"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                fill="#1F5800"
                fill-opacity="0.1"
              />
              <path
                clip-rule="evenodd"
                d="M22.3399 12.2667L14.7467 21.1419L9.7002 16.1984L10.6332 15.2459L14.6608 19.1913L21.3268 11.3999L22.3399 12.2667Z"
                fill="#1F5800"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </span>
        <div
          class="om-react-ui-alert-content"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
          >
            success alert
          </div>
        </div>
        <button
          aria-label="Close alert"
          class="om-react-ui-alert-close"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="currentColor"
              height="16"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-alert om-react-ui-alert-success"
    >
      <span
        class="om-react-ui-alert-icon"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="32"
            stroke="none"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
              fill="#1F5800"
              fill-opacity="0.1"
            />
            <path
              clip-rule="evenodd"
              d="M22.3399 12.2667L14.7467 21.1419L9.7002 16.1984L10.6332 15.2459L14.6608 19.1913L21.3268 11.3999L22.3399 12.2667Z"
              fill="#1F5800"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </span>
      <div
        class="om-react-ui-alert-content"
      >
        <div
          class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
        >
          success alert
        </div>
      </div>
      <button
        aria-label="Close alert"
        class="om-react-ui-alert-close"
        type="button"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="currentColor"
            height="16"
            stroke="none"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Alert renders all status variants 3`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-alert om-react-ui-alert-info"
      >
        <span
          class="om-react-ui-alert-icon"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="32"
              stroke="none"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                fill="#DDE6F4"
              />
              <g
                clip-path="url(#notif-info-clip)"
              >
                <path
                  clip-rule="evenodd"
                  d="M16 10C19.3137 10 22 12.6863 22 16C22 19.3137 19.3137 22 16 22C12.6863 22 9.99999 19.3137 9.99999 16C9.99999 12.6863 12.6863 10 16 10ZM16 8.66669C20.0501 8.66669 23.3333 11.9499 23.3333 16C23.3333 20.0501 20.0501 23.3334 16 23.3334C11.9499 23.3334 8.66666 20.0501 8.66666 16C8.66666 11.9499 11.9499 8.66669 16 8.66669Z"
                  fill="#073387"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.3333 15.3334V19.6667H16.6667V15.3334H15.3333Z"
                  fill="#073387"
                  fill-rule="evenodd"
                />
                <path
                  d="M17 13.3334C17 12.7811 16.5523 12.3334 16 12.3334C15.4477 12.3334 15 12.7811 15 13.3334C15 13.8856 15.4477 14.3334 16 14.3334C16.5523 14.3334 17 13.8856 17 13.3334Z"
                  fill="#073387"
                />
              </g>
              <defs>
                <clippath
                  id="notif-info-clip"
                >
                  <rect
                    fill="white"
                    height="16"
                    transform="translate(8 8)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </i>
        </span>
        <div
          class="om-react-ui-alert-content"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
          >
            info alert
          </div>
        </div>
        <button
          aria-label="Close alert"
          class="om-react-ui-alert-close"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="currentColor"
              height="16"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
    <div>
      <div
        class="om-react-ui-alert om-react-ui-alert-success"
      >
        <span
          class="om-react-ui-alert-icon"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="32"
              stroke="none"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                fill="#1F5800"
                fill-opacity="0.1"
              />
              <path
                clip-rule="evenodd"
                d="M22.3399 12.2667L14.7467 21.1419L9.7002 16.1984L10.6332 15.2459L14.6608 19.1913L21.3268 11.3999L22.3399 12.2667Z"
                fill="#1F5800"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </span>
        <div
          class="om-react-ui-alert-content"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
          >
            success alert
          </div>
        </div>
        <button
          aria-label="Close alert"
          class="om-react-ui-alert-close"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="currentColor"
              height="16"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
    <div>
      <div
        class="om-react-ui-alert om-react-ui-alert-warning"
      >
        <span
          class="om-react-ui-alert-icon"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="32"
              stroke="none"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                fill="#F4C600"
                fill-opacity="0.2"
              />
              <path
                clip-rule="evenodd"
                d="M15.3333 17.3333V13H16.6667V17.3333H15.3333Z"
                fill="#DB8600"
                fill-rule="evenodd"
              />
              <path
                d="M17 19.3333C17 19.8856 16.5523 20.3333 16 20.3333C15.4477 20.3333 15 19.8856 15 19.3333C15 18.7811 15.4477 18.3333 16 18.3333C16.5523 18.3333 17 18.7811 17 19.3333Z"
                fill="#DB8600"
              />
              <path
                clip-rule="evenodd"
                d="M10.1503 19.1783L10.9339 21.3333H21.0661L21.8497 19.1783L16 10.4037L10.1503 19.1783ZM17.1094 9.66411C16.5816 8.87246 15.4184 8.87246 14.8906 9.66411L9.04086 18.4387C8.8056 18.7916 8.75226 19.2354 8.89721 19.634L9.68085 21.789C9.87246 22.3159 10.3732 22.6667 10.9339 22.6667H21.0661C21.6268 22.6667 22.1276 22.3159 22.3192 21.789L23.1028 19.634C23.2477 19.2354 23.1944 18.7916 22.9591 18.4387L17.1094 9.66411Z"
                fill="#DB8600"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </span>
        <div
          class="om-react-ui-alert-content"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
          >
            warning alert
          </div>
        </div>
        <button
          aria-label="Close alert"
          class="om-react-ui-alert-close"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="currentColor"
              height="16"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-alert om-react-ui-alert-warning"
    >
      <span
        class="om-react-ui-alert-icon"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="32"
            stroke="none"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
              fill="#F4C600"
              fill-opacity="0.2"
            />
            <path
              clip-rule="evenodd"
              d="M15.3333 17.3333V13H16.6667V17.3333H15.3333Z"
              fill="#DB8600"
              fill-rule="evenodd"
            />
            <path
              d="M17 19.3333C17 19.8856 16.5523 20.3333 16 20.3333C15.4477 20.3333 15 19.8856 15 19.3333C15 18.7811 15.4477 18.3333 16 18.3333C16.5523 18.3333 17 18.7811 17 19.3333Z"
              fill="#DB8600"
            />
            <path
              clip-rule="evenodd"
              d="M10.1503 19.1783L10.9339 21.3333H21.0661L21.8497 19.1783L16 10.4037L10.1503 19.1783ZM17.1094 9.66411C16.5816 8.87246 15.4184 8.87246 14.8906 9.66411L9.04086 18.4387C8.8056 18.7916 8.75226 19.2354 8.89721 19.634L9.68085 21.789C9.87246 22.3159 10.3732 22.6667 10.9339 22.6667H21.0661C21.6268 22.6667 22.1276 22.3159 22.3192 21.789L23.1028 19.634C23.2477 19.2354 23.1944 18.7916 22.9591 18.4387L17.1094 9.66411Z"
              fill="#DB8600"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </span>
      <div
        class="om-react-ui-alert-content"
      >
        <div
          class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
        >
          warning alert
        </div>
      </div>
      <button
        aria-label="Close alert"
        class="om-react-ui-alert-close"
        type="button"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="currentColor"
            height="16"
            stroke="none"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Alert renders all status variants 4`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-alert om-react-ui-alert-info"
      >
        <span
          class="om-react-ui-alert-icon"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="32"
              stroke="none"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                fill="#DDE6F4"
              />
              <g
                clip-path="url(#notif-info-clip)"
              >
                <path
                  clip-rule="evenodd"
                  d="M16 10C19.3137 10 22 12.6863 22 16C22 19.3137 19.3137 22 16 22C12.6863 22 9.99999 19.3137 9.99999 16C9.99999 12.6863 12.6863 10 16 10ZM16 8.66669C20.0501 8.66669 23.3333 11.9499 23.3333 16C23.3333 20.0501 20.0501 23.3334 16 23.3334C11.9499 23.3334 8.66666 20.0501 8.66666 16C8.66666 11.9499 11.9499 8.66669 16 8.66669Z"
                  fill="#073387"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.3333 15.3334V19.6667H16.6667V15.3334H15.3333Z"
                  fill="#073387"
                  fill-rule="evenodd"
                />
                <path
                  d="M17 13.3334C17 12.7811 16.5523 12.3334 16 12.3334C15.4477 12.3334 15 12.7811 15 13.3334C15 13.8856 15.4477 14.3334 16 14.3334C16.5523 14.3334 17 13.8856 17 13.3334Z"
                  fill="#073387"
                />
              </g>
              <defs>
                <clippath
                  id="notif-info-clip"
                >
                  <rect
                    fill="white"
                    height="16"
                    transform="translate(8 8)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </i>
        </span>
        <div
          class="om-react-ui-alert-content"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
          >
            info alert
          </div>
        </div>
        <button
          aria-label="Close alert"
          class="om-react-ui-alert-close"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="currentColor"
              height="16"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
    <div>
      <div
        class="om-react-ui-alert om-react-ui-alert-success"
      >
        <span
          class="om-react-ui-alert-icon"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="32"
              stroke="none"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                fill="#1F5800"
                fill-opacity="0.1"
              />
              <path
                clip-rule="evenodd"
                d="M22.3399 12.2667L14.7467 21.1419L9.7002 16.1984L10.6332 15.2459L14.6608 19.1913L21.3268 11.3999L22.3399 12.2667Z"
                fill="#1F5800"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </span>
        <div
          class="om-react-ui-alert-content"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
          >
            success alert
          </div>
        </div>
        <button
          aria-label="Close alert"
          class="om-react-ui-alert-close"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="currentColor"
              height="16"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
    <div>
      <div
        class="om-react-ui-alert om-react-ui-alert-warning"
      >
        <span
          class="om-react-ui-alert-icon"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="32"
              stroke="none"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                fill="#F4C600"
                fill-opacity="0.2"
              />
              <path
                clip-rule="evenodd"
                d="M15.3333 17.3333V13H16.6667V17.3333H15.3333Z"
                fill="#DB8600"
                fill-rule="evenodd"
              />
              <path
                d="M17 19.3333C17 19.8856 16.5523 20.3333 16 20.3333C15.4477 20.3333 15 19.8856 15 19.3333C15 18.7811 15.4477 18.3333 16 18.3333C16.5523 18.3333 17 18.7811 17 19.3333Z"
                fill="#DB8600"
              />
              <path
                clip-rule="evenodd"
                d="M10.1503 19.1783L10.9339 21.3333H21.0661L21.8497 19.1783L16 10.4037L10.1503 19.1783ZM17.1094 9.66411C16.5816 8.87246 15.4184 8.87246 14.8906 9.66411L9.04086 18.4387C8.8056 18.7916 8.75226 19.2354 8.89721 19.634L9.68085 21.789C9.87246 22.3159 10.3732 22.6667 10.9339 22.6667H21.0661C21.6268 22.6667 22.1276 22.3159 22.3192 21.789L23.1028 19.634C23.2477 19.2354 23.1944 18.7916 22.9591 18.4387L17.1094 9.66411Z"
                fill="#DB8600"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </span>
        <div
          class="om-react-ui-alert-content"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
          >
            warning alert
          </div>
        </div>
        <button
          aria-label="Close alert"
          class="om-react-ui-alert-close"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="currentColor"
              height="16"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
    <div>
      <div
        class="om-react-ui-alert om-react-ui-alert-error"
      >
        <span
          class="om-react-ui-alert-icon"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="32"
              stroke="none"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                fill="#AE0000"
                fill-opacity="0.1"
              />
              <path
                clip-rule="evenodd"
                d="M15.0572 16L11.1953 12.1381L12.1381 11.1953L16 15.0572L19.8619 11.1953L20.8047 12.1381L16.9428 16L20.8048 19.862L19.862 20.8048L16 16.9428L12.138 20.8048L11.1952 19.862L15.0572 16Z"
                fill="#AE0000"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </span>
        <div
          class="om-react-ui-alert-content"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
          >
            error alert
          </div>
        </div>
        <button
          aria-label="Close alert"
          class="om-react-ui-alert-close"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="currentColor"
              height="16"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-alert om-react-ui-alert-error"
    >
      <span
        class="om-react-ui-alert-icon"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="32"
            stroke="none"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
              fill="#AE0000"
              fill-opacity="0.1"
            />
            <path
              clip-rule="evenodd"
              d="M15.0572 16L11.1953 12.1381L12.1381 11.1953L16 15.0572L19.8619 11.1953L20.8047 12.1381L16.9428 16L20.8048 19.862L19.862 20.8048L16 16.9428L12.138 20.8048L11.1952 19.862L15.0572 16Z"
              fill="#AE0000"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </span>
      <div
        class="om-react-ui-alert-content"
      >
        <div
          class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
        >
          error alert
        </div>
      </div>
      <button
        aria-label="Close alert"
        class="om-react-ui-alert-close"
        type="button"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="currentColor"
            height="16"
            stroke="none"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Alert renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-alert om-react-ui-alert-info"
      >
        <span
          class="om-react-ui-alert-icon"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="32"
              stroke="none"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                fill="#DDE6F4"
              />
              <g
                clip-path="url(#notif-info-clip)"
              >
                <path
                  clip-rule="evenodd"
                  d="M16 10C19.3137 10 22 12.6863 22 16C22 19.3137 19.3137 22 16 22C12.6863 22 9.99999 19.3137 9.99999 16C9.99999 12.6863 12.6863 10 16 10ZM16 8.66669C20.0501 8.66669 23.3333 11.9499 23.3333 16C23.3333 20.0501 20.0501 23.3334 16 23.3334C11.9499 23.3334 8.66666 20.0501 8.66666 16C8.66666 11.9499 11.9499 8.66669 16 8.66669Z"
                  fill="#073387"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.3333 15.3334V19.6667H16.6667V15.3334H15.3333Z"
                  fill="#073387"
                  fill-rule="evenodd"
                />
                <path
                  d="M17 13.3334C17 12.7811 16.5523 12.3334 16 12.3334C15.4477 12.3334 15 12.7811 15 13.3334C15 13.8856 15.4477 14.3334 16 14.3334C16.5523 14.3334 17 13.8856 17 13.3334Z"
                  fill="#073387"
                />
              </g>
              <defs>
                <clippath
                  id="notif-info-clip"
                >
                  <rect
                    fill="white"
                    height="16"
                    transform="translate(8 8)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </i>
        </span>
        <div
          class="om-react-ui-alert-content"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
          >
            Test Title
          </div>
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-md om-react-ui-typography-color-default-secondary"
          >
            Test body text.
          </span>
        </div>
        <button
          aria-label="Close alert"
          class="om-react-ui-alert-close"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="currentColor"
              height="16"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-alert om-react-ui-alert-info"
    >
      <span
        class="om-react-ui-alert-icon"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="32"
            stroke="none"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
              fill="#DDE6F4"
            />
            <g
              clip-path="url(#notif-info-clip)"
            >
              <path
                clip-rule="evenodd"
                d="M16 10C19.3137 10 22 12.6863 22 16C22 19.3137 19.3137 22 16 22C12.6863 22 9.99999 19.3137 9.99999 16C9.99999 12.6863 12.6863 10 16 10ZM16 8.66669C20.0501 8.66669 23.3333 11.9499 23.3333 16C23.3333 20.0501 20.0501 23.3334 16 23.3334C11.9499 23.3334 8.66666 20.0501 8.66666 16C8.66666 11.9499 11.9499 8.66669 16 8.66669Z"
                fill="#073387"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M15.3333 15.3334V19.6667H16.6667V15.3334H15.3333Z"
                fill="#073387"
                fill-rule="evenodd"
              />
              <path
                d="M17 13.3334C17 12.7811 16.5523 12.3334 16 12.3334C15.4477 12.3334 15 12.7811 15 13.3334C15 13.8856 15.4477 14.3334 16 14.3334C16.5523 14.3334 17 13.8856 17 13.3334Z"
                fill="#073387"
              />
            </g>
            <defs>
              <clippath
                id="notif-info-clip"
              >
                <rect
                  fill="white"
                  height="16"
                  transform="translate(8 8)"
                  width="16"
                />
              </clippath>
            </defs>
          </svg>
        </i>
      </span>
      <div
        class="om-react-ui-alert-content"
      >
        <div
          class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
        >
          Test Title
        </div>
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-md om-react-ui-typography-color-default-secondary"
        >
          Test body text.
        </span>
      </div>
      <button
        aria-label="Close alert"
        class="om-react-ui-alert-close"
        type="button"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="--icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="currentColor"
            height="16"
            stroke="none"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Alert renders without close button when closable is false 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-alert om-react-ui-alert-info"
      >
        <span
          class="om-react-ui-alert-icon"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="32"
              stroke="none"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                fill="#DDE6F4"
              />
              <g
                clip-path="url(#notif-info-clip)"
              >
                <path
                  clip-rule="evenodd"
                  d="M16 10C19.3137 10 22 12.6863 22 16C22 19.3137 19.3137 22 16 22C12.6863 22 9.99999 19.3137 9.99999 16C9.99999 12.6863 12.6863 10 16 10ZM16 8.66669C20.0501 8.66669 23.3333 11.9499 23.3333 16C23.3333 20.0501 20.0501 23.3334 16 23.3334C11.9499 23.3334 8.66666 20.0501 8.66666 16C8.66666 11.9499 11.9499 8.66669 16 8.66669Z"
                  fill="#073387"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.3333 15.3334V19.6667H16.6667V15.3334H15.3333Z"
                  fill="#073387"
                  fill-rule="evenodd"
                />
                <path
                  d="M17 13.3334C17 12.7811 16.5523 12.3334 16 12.3334C15.4477 12.3334 15 12.7811 15 13.3334C15 13.8856 15.4477 14.3334 16 14.3334C16.5523 14.3334 17 13.8856 17 13.3334Z"
                  fill="#073387"
                />
              </g>
              <defs>
                <clippath
                  id="notif-info-clip"
                >
                  <rect
                    fill="white"
                    height="16"
                    transform="translate(8 8)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </i>
        </span>
        <div
          class="om-react-ui-alert-content"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
          >
            No close
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-alert om-react-ui-alert-info"
    >
      <span
        class="om-react-ui-alert-icon"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="--icon-color: #131313; --icon-width: 32px; --icon-height: 32px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="32"
            stroke="none"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
              fill="#DDE6F4"
            />
            <g
              clip-path="url(#notif-info-clip)"
            >
              <path
                clip-rule="evenodd"
                d="M16 10C19.3137 10 22 12.6863 22 16C22 19.3137 19.3137 22 16 22C12.6863 22 9.99999 19.3137 9.99999 16C9.99999 12.6863 12.6863 10 16 10ZM16 8.66669C20.0501 8.66669 23.3333 11.9499 23.3333 16C23.3333 20.0501 20.0501 23.3334 16 23.3334C11.9499 23.3334 8.66666 20.0501 8.66666 16C8.66666 11.9499 11.9499 8.66669 16 8.66669Z"
                fill="#073387"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M15.3333 15.3334V19.6667H16.6667V15.3334H15.3333Z"
                fill="#073387"
                fill-rule="evenodd"
              />
              <path
                d="M17 13.3334C17 12.7811 16.5523 12.3334 16 12.3334C15.4477 12.3334 15 12.7811 15 13.3334C15 13.8856 15.4477 14.3334 16 14.3334C16.5523 14.3334 17 13.8856 17 13.3334Z"
                fill="#073387"
              />
            </g>
            <defs>
              <clippath
                id="notif-info-clip"
              >
                <rect
                  fill="white"
                  height="16"
                  transform="translate(8 8)"
                  width="16"
                />
              </clippath>
            </defs>
          </svg>
        </i>
      </span>
      <div
        class="om-react-ui-alert-content"
      >
        <div
          class="om-react-ui-typography om-react-ui-typography-title om-react-ui-typography-title-sm om-react-ui-typography-color-default om-react-ui-typography-strong"
        >
          No close
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
